--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "dependencies for Ion Caza's resume",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "bulma": "^0.4.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
