--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "react-resume",
-  "version": "0.1.0",
+  "name": "resume",
+  "version": "2.0.1",
+  "description": "Ion Caza's resume",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.1",
