--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "test": "jest",
+    "test": "jest --verbose",
+    "dev": "npm-run-all test start",
     "old.start": "react-scripts start",
     "old.build": "react-scripts build",
     "old.test": "react-scripts test --env=jsdom",
@@ -43,6 +44,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.1",
     "node-sass": "^4.9.2",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
