--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resume",
-  "version": "2.0.1",
+  "version": "2.0.3",
   "description": "Ion Caza's resume",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1"
@@ -16,11 +17,7 @@
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
     "test": "jest --verbose",
-    "dev": "npm-run-all test start",
-    "old.start": "react-scripts start",
-    "old.build": "react-scripts build",
-    "old.test": "react-scripts test --env=jsdom",
-    "old.eject": "react-scripts eject"
+    "dev": "npm-run-all test start"
   },
   "devDependencies": {
     "autoprefixer": "^9.0.1",
@@ -52,7 +49,8 @@
     "npm-run-all": "^4.1.3",
     "postcss-loader": "^2.1.6",
     "prettier": "^1.13.7",
-    "react-scripts": "^1.1.4",
+    "promise": "^8.0.1",
+    "raf": "^3.4.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
@@ -60,5 +58,51 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-md5-hash": "0.0.6"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,mjs}"
+    ],
+    "setupFiles": [
+      "<rootDir>/utils/jest/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
+    "testEnvironment": "jsdom",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/utils/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/utils/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node",
+      "mjs"
+    ],
+    "globals": {
+      "window": true
+    }
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
