--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "dependencies": {
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
-    "print-js": "^1.0.47",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-obfuscate": "^2.1.4",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-to-print": "^2.0.0-alpha-2"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development --open --config ./config/webpack.js",
